--- a/bib/references.bib
+++ b/bib/references.bib
@@ -46,22 +46,6 @@
   pages = {1--8}
 }
 
-@article{Tonikan2019Explaining,
-  abstract = {},
-  author = {Tonikan, S. and Joshi, S. and Davened, D. and Goldenberg, A.},
-  doi = {},
-  journal = {},
-  keywords = {time_series, counterfactuals, interpretability, type: post_hoc, model: agnostic},
-  number = {},
-  publisher = {},
-  volume = {},
-  series = {},
-  title = {Explaining time series by counterfactuals},
-  url = {https://openreview.net/pdf?id=HygDF1rYDB},
-  year = {2019},
-  pages = {}
-}
-
 @article{Vinayavekhin2018Focusing,
   abstract = {},
   author = {Vinayavekhin, Puttachai and Chaudhury, Sourav and Munawar, Ammar and Agravante, D. Julius and De Magistrals, Giulio and Kimura, Daisuke and Tachibana, Ryuji},
@@ -153,7 +137,23 @@
   volume = {147},
   series = {},
   title = {Interpretability and learning in neuro fuzzy systems},
-  url = {https://old.cisuc.uc.pt/publication/show/334},
+  url = {https://doi.org/10.1016/j.fss.2003.11.012},
   year = {2004},
   pages = {17--38}
+}
+
+@article{Wang2020Deep,
+  abstract = {},
+  author = {Wang, Jianlong and Wang, Xia and Li, Chen and Wu, Jian and others},
+  doi = {10.1109/TFUZZ.2020.3005293},
+  journal = {IEEE Transactions on Fuzzy Systems},
+  keywords = {fuzzy_systems, multivariate_time_series, prediction, interpretability},
+  number = {},
+  publisher = {IEEE},
+  volume = {},
+  series = {},
+  title = {Deep fuzzy cognitive maps for interpretable multivariate time series prediction},
+  url = {http://dx.doi.org/10.1109/TFUZZ.2020.3005293},
+  year = {2020},
+  pages = {}
 }
